parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID ILLAVE variables bloque DLLAVE
Rule 2     variables -> VAR ids DOSPUNTOS TypeOf PUNTOYCOMA
Rule 3     variables -> empty
Rule 4     ids -> ID
Rule 5     ids -> ids COMA ID
Rule 6     TypeOf -> INT
Rule 7     TypeOf -> FLOAT
Rule 8     TypeOf -> BOOL
Rule 9     TypeOf -> STRING
Rule 10    bloque -> BEGIN PUNTOYCOMA estatutos END PUNTOYCOMA
Rule 11    estatuto -> asignar
Rule 12    estatuto -> if
Rule 13    estatuto -> while
Rule 14    estatuto -> for
Rule 15    estatuto -> writeln
Rule 16    estatuto -> incremento_puntocoma
Rule 17    estatutos -> estatuto estatutos
Rule 18    estatutos -> empty
Rule 19    asignar_base -> ID ASSIGNAR expresion
Rule 20    asignar -> asignar_base PUNTOYCOMA
Rule 21    writeln -> WRITELN IPAREN valor DPAREN PUNTOYCOMA
Rule 22    valor -> CTE
Rule 23    valor -> ID
Rule 24    valor -> STRING
Rule 25    if -> IF IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE
Rule 26    if -> IF IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE marca_goto ELSE ILLAVE estatutos DLLAVE
Rule 27    marca_gotoF -> empty
Rule 28    marca_goto -> empty
Rule 29    while -> WHILE marca_inicio IPAREN expresion marca_gotoF DPAREN DO ILLAVE estatutos DLLAVE
Rule 30    marca_inicio -> empty
Rule 31    for -> FOR IPAREN asignar_base PUNTOYCOMA marca_inicio expresion marca_gotoF PUNTOYCOMA incremento_expr DPAREN ILLAVE estatutos DLLAVE
Rule 32    incremento_expr -> ID INCREMENTO
Rule 33    incremento_expr -> ID DECREMENTO
Rule 34    incremento_expr -> asignar_base
Rule 35    incremento_puntocoma -> ID INCREMENTO PUNTOYCOMA
Rule 36    incremento_puntocoma -> ID DECREMENTO PUNTOYCOMA
Rule 37    expresion -> expresionS MEQ expresionS
Rule 38    expresion -> expresionS MAQ expresionS
Rule 39    expresion -> expresionS MEI expresionS
Rule 40    expresion -> expresionS MAI expresionS
Rule 41    expresion -> expresionS IGUAL expresionS
Rule 42    expresion -> expresionS DISTINTO expresionS
Rule 43    expresion -> expresionS
Rule 44    expresionS -> expresionS SUMA termino
Rule 45    expresionS -> expresionS RESTA termino
Rule 46    expresionS -> expresionS OR termino
Rule 47    expresionS -> termino
Rule 48    termino -> termino MULTIPLICAR factor
Rule 49    termino -> termino DIVIDIR factor
Rule 50    termino -> termino AND factor
Rule 51    termino -> factor
Rule 52    factor -> ID
Rule 53    factor -> CTE
Rule 54    factor -> TRUE
Rule 55    factor -> FALSE
Rule 56    factor -> IPAREN expresion DPAREN
Rule 57    factor -> NOT factor
Rule 58    empty -> <empty>

Terminals, with rules where they appear

AND                  : 50
ASSIGNAR             : 19
BEGIN                : 10
BOOL                 : 8
COMA                 : 5
CTE                  : 22 53
DECREMENTO           : 33 36
DISTINTO             : 42
DIVIDIR              : 49
DLLAVE               : 1 25 26 26 29 31
DO                   : 29
DOSPUNTOS            : 2
DPAREN               : 21 25 26 29 31 56
ELSE                 : 26
END                  : 10
FALSE                : 55
FLOAT                : 7
FOR                  : 31
ID                   : 1 4 5 19 23 32 33 35 36 52
IF                   : 25 26
IGUAL                : 41
ILLAVE               : 1 25 26 26 29 31
INCREMENTO           : 32 35
INT                  : 6
IPAREN               : 21 25 26 29 31 56
MAI                  : 40
MAQ                  : 38
MEI                  : 39
MEQ                  : 37
MULTIPLICAR          : 48
NOT                  : 57
OR                   : 46
PROGRAM              : 1
PUNTOYCOMA           : 2 10 10 20 21 31 31 35 36
RESTA                : 45
STRING               : 9 24
SUMA                 : 44
THEN                 : 25 26
TRUE                 : 54
VAR                  : 2
WHILE                : 29
WRITELN              : 21
error                : 

Nonterminals, with rules where they appear

TypeOf               : 2
asignar              : 11
asignar_base         : 20 31 34
bloque               : 1
empty                : 3 18 27 28 30
estatuto             : 17
estatutos            : 10 17 25 26 26 29 31
expresion            : 19 25 26 29 31 56
expresionS           : 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46
factor               : 48 49 50 51 57
for                  : 14
ids                  : 2 5
if                   : 12
incremento_expr      : 31
incremento_puntocoma : 16
marca_goto           : 26
marca_gotoF          : 25 26 29 31
marca_inicio         : 29 31
programa             : 0
termino              : 44 45 46 47 48 49 50
valor                : 21
variables            : 1
while                : 13
writeln              : 15

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID ILLAVE variables bloque DLLAVE

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID ILLAVE variables bloque DLLAVE

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . ILLAVE variables bloque DLLAVE

    ILLAVE          shift and go to state 4


state 4

    (1) programa -> PROGRAM ID ILLAVE . variables bloque DLLAVE
    (2) variables -> . VAR ids DOSPUNTOS TypeOf PUNTOYCOMA
    (3) variables -> . empty
    (58) empty -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 58 (empty -> .)

    variables                      shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) programa -> PROGRAM ID ILLAVE variables . bloque DLLAVE
    (10) bloque -> . BEGIN PUNTOYCOMA estatutos END PUNTOYCOMA

    BEGIN           shift and go to state 9

    bloque                         shift and go to state 8

state 6

    (2) variables -> VAR . ids DOSPUNTOS TypeOf PUNTOYCOMA
    (4) ids -> . ID
    (5) ids -> . ids COMA ID

    ID              shift and go to state 11

    ids                            shift and go to state 10

state 7

    (3) variables -> empty .

    BEGIN           reduce using rule 3 (variables -> empty .)


state 8

    (1) programa -> PROGRAM ID ILLAVE variables bloque . DLLAVE

    DLLAVE          shift and go to state 12


state 9

    (10) bloque -> BEGIN . PUNTOYCOMA estatutos END PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 13


state 10

    (2) variables -> VAR ids . DOSPUNTOS TypeOf PUNTOYCOMA
    (5) ids -> ids . COMA ID

    DOSPUNTOS       shift and go to state 14
    COMA            shift and go to state 15


state 11

    (4) ids -> ID .

    DOSPUNTOS       reduce using rule 4 (ids -> ID .)
    COMA            reduce using rule 4 (ids -> ID .)


state 12

    (1) programa -> PROGRAM ID ILLAVE variables bloque DLLAVE .

    $end            reduce using rule 1 (programa -> PROGRAM ID ILLAVE variables bloque DLLAVE .)


state 13

    (10) bloque -> BEGIN PUNTOYCOMA . estatutos END PUNTOYCOMA
    (17) estatutos -> . estatuto estatutos
    (18) estatutos -> . empty
    (11) estatuto -> . asignar
    (12) estatuto -> . if
    (13) estatuto -> . while
    (14) estatuto -> . for
    (15) estatuto -> . writeln
    (16) estatuto -> . incremento_puntocoma
    (58) empty -> .
    (20) asignar -> . asignar_base PUNTOYCOMA
    (25) if -> . IF IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE
    (26) if -> . IF IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE marca_goto ELSE ILLAVE estatutos DLLAVE
    (29) while -> . WHILE marca_inicio IPAREN expresion marca_gotoF DPAREN DO ILLAVE estatutos DLLAVE
    (31) for -> . FOR IPAREN asignar_base PUNTOYCOMA marca_inicio expresion marca_gotoF PUNTOYCOMA incremento_expr DPAREN ILLAVE estatutos DLLAVE
    (21) writeln -> . WRITELN IPAREN valor DPAREN PUNTOYCOMA
    (35) incremento_puntocoma -> . ID INCREMENTO PUNTOYCOMA
    (36) incremento_puntocoma -> . ID DECREMENTO PUNTOYCOMA
    (19) asignar_base -> . ID ASSIGNAR expresion

    END             reduce using rule 58 (empty -> .)
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    WRITELN         shift and go to state 29
    ID              shift and go to state 30

    estatutos                      shift and go to state 16
    estatuto                       shift and go to state 17
    empty                          shift and go to state 18
    asignar                        shift and go to state 19
    if                             shift and go to state 20
    while                          shift and go to state 21
    for                            shift and go to state 22
    writeln                        shift and go to state 23
    incremento_puntocoma           shift and go to state 24
    asignar_base                   shift and go to state 25

state 14

    (2) variables -> VAR ids DOSPUNTOS . TypeOf PUNTOYCOMA
    (6) TypeOf -> . INT
    (7) TypeOf -> . FLOAT
    (8) TypeOf -> . BOOL
    (9) TypeOf -> . STRING

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    BOOL            shift and go to state 34
    STRING          shift and go to state 35

    TypeOf                         shift and go to state 31

state 15

    (5) ids -> ids COMA . ID

    ID              shift and go to state 36


state 16

    (10) bloque -> BEGIN PUNTOYCOMA estatutos . END PUNTOYCOMA

    END             shift and go to state 37


state 17

    (17) estatutos -> estatuto . estatutos
    (17) estatutos -> . estatuto estatutos
    (18) estatutos -> . empty
    (11) estatuto -> . asignar
    (12) estatuto -> . if
    (13) estatuto -> . while
    (14) estatuto -> . for
    (15) estatuto -> . writeln
    (16) estatuto -> . incremento_puntocoma
    (58) empty -> .
    (20) asignar -> . asignar_base PUNTOYCOMA
    (25) if -> . IF IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE
    (26) if -> . IF IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE marca_goto ELSE ILLAVE estatutos DLLAVE
    (29) while -> . WHILE marca_inicio IPAREN expresion marca_gotoF DPAREN DO ILLAVE estatutos DLLAVE
    (31) for -> . FOR IPAREN asignar_base PUNTOYCOMA marca_inicio expresion marca_gotoF PUNTOYCOMA incremento_expr DPAREN ILLAVE estatutos DLLAVE
    (21) writeln -> . WRITELN IPAREN valor DPAREN PUNTOYCOMA
    (35) incremento_puntocoma -> . ID INCREMENTO PUNTOYCOMA
    (36) incremento_puntocoma -> . ID DECREMENTO PUNTOYCOMA
    (19) asignar_base -> . ID ASSIGNAR expresion

    END             reduce using rule 58 (empty -> .)
    DLLAVE          reduce using rule 58 (empty -> .)
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    WRITELN         shift and go to state 29
    ID              shift and go to state 30

    estatuto                       shift and go to state 17
    estatutos                      shift and go to state 38
    empty                          shift and go to state 18
    asignar                        shift and go to state 19
    if                             shift and go to state 20
    while                          shift and go to state 21
    for                            shift and go to state 22
    writeln                        shift and go to state 23
    incremento_puntocoma           shift and go to state 24
    asignar_base                   shift and go to state 25

state 18

    (18) estatutos -> empty .

    END             reduce using rule 18 (estatutos -> empty .)
    DLLAVE          reduce using rule 18 (estatutos -> empty .)


state 19

    (11) estatuto -> asignar .

    IF              reduce using rule 11 (estatuto -> asignar .)
    WHILE           reduce using rule 11 (estatuto -> asignar .)
    FOR             reduce using rule 11 (estatuto -> asignar .)
    WRITELN         reduce using rule 11 (estatuto -> asignar .)
    ID              reduce using rule 11 (estatuto -> asignar .)
    END             reduce using rule 11 (estatuto -> asignar .)
    DLLAVE          reduce using rule 11 (estatuto -> asignar .)


state 20

    (12) estatuto -> if .

    IF              reduce using rule 12 (estatuto -> if .)
    WHILE           reduce using rule 12 (estatuto -> if .)
    FOR             reduce using rule 12 (estatuto -> if .)
    WRITELN         reduce using rule 12 (estatuto -> if .)
    ID              reduce using rule 12 (estatuto -> if .)
    END             reduce using rule 12 (estatuto -> if .)
    DLLAVE          reduce using rule 12 (estatuto -> if .)


state 21

    (13) estatuto -> while .

    IF              reduce using rule 13 (estatuto -> while .)
    WHILE           reduce using rule 13 (estatuto -> while .)
    FOR             reduce using rule 13 (estatuto -> while .)
    WRITELN         reduce using rule 13 (estatuto -> while .)
    ID              reduce using rule 13 (estatuto -> while .)
    END             reduce using rule 13 (estatuto -> while .)
    DLLAVE          reduce using rule 13 (estatuto -> while .)


state 22

    (14) estatuto -> for .

    IF              reduce using rule 14 (estatuto -> for .)
    WHILE           reduce using rule 14 (estatuto -> for .)
    FOR             reduce using rule 14 (estatuto -> for .)
    WRITELN         reduce using rule 14 (estatuto -> for .)
    ID              reduce using rule 14 (estatuto -> for .)
    END             reduce using rule 14 (estatuto -> for .)
    DLLAVE          reduce using rule 14 (estatuto -> for .)


state 23

    (15) estatuto -> writeln .

    IF              reduce using rule 15 (estatuto -> writeln .)
    WHILE           reduce using rule 15 (estatuto -> writeln .)
    FOR             reduce using rule 15 (estatuto -> writeln .)
    WRITELN         reduce using rule 15 (estatuto -> writeln .)
    ID              reduce using rule 15 (estatuto -> writeln .)
    END             reduce using rule 15 (estatuto -> writeln .)
    DLLAVE          reduce using rule 15 (estatuto -> writeln .)


state 24

    (16) estatuto -> incremento_puntocoma .

    IF              reduce using rule 16 (estatuto -> incremento_puntocoma .)
    WHILE           reduce using rule 16 (estatuto -> incremento_puntocoma .)
    FOR             reduce using rule 16 (estatuto -> incremento_puntocoma .)
    WRITELN         reduce using rule 16 (estatuto -> incremento_puntocoma .)
    ID              reduce using rule 16 (estatuto -> incremento_puntocoma .)
    END             reduce using rule 16 (estatuto -> incremento_puntocoma .)
    DLLAVE          reduce using rule 16 (estatuto -> incremento_puntocoma .)


state 25

    (20) asignar -> asignar_base . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 39


state 26

    (25) if -> IF . IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE
    (26) if -> IF . IPAREN expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE marca_goto ELSE ILLAVE estatutos DLLAVE

    IPAREN          shift and go to state 40


state 27

    (29) while -> WHILE . marca_inicio IPAREN expresion marca_gotoF DPAREN DO ILLAVE estatutos DLLAVE
    (30) marca_inicio -> . empty
    (58) empty -> .

    IPAREN          reduce using rule 58 (empty -> .)

    marca_inicio                   shift and go to state 41
    empty                          shift and go to state 42

state 28

    (31) for -> FOR . IPAREN asignar_base PUNTOYCOMA marca_inicio expresion marca_gotoF PUNTOYCOMA incremento_expr DPAREN ILLAVE estatutos DLLAVE

    IPAREN          shift and go to state 43


state 29

    (21) writeln -> WRITELN . IPAREN valor DPAREN PUNTOYCOMA

    IPAREN          shift and go to state 44


state 30

    (35) incremento_puntocoma -> ID . INCREMENTO PUNTOYCOMA
    (36) incremento_puntocoma -> ID . DECREMENTO PUNTOYCOMA
    (19) asignar_base -> ID . ASSIGNAR expresion

    INCREMENTO      shift and go to state 45
    DECREMENTO      shift and go to state 46
    ASSIGNAR        shift and go to state 47


state 31

    (2) variables -> VAR ids DOSPUNTOS TypeOf . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 48


state 32

    (6) TypeOf -> INT .

    PUNTOYCOMA      reduce using rule 6 (TypeOf -> INT .)


state 33

    (7) TypeOf -> FLOAT .

    PUNTOYCOMA      reduce using rule 7 (TypeOf -> FLOAT .)


state 34

    (8) TypeOf -> BOOL .

    PUNTOYCOMA      reduce using rule 8 (TypeOf -> BOOL .)


state 35

    (9) TypeOf -> STRING .

    PUNTOYCOMA      reduce using rule 9 (TypeOf -> STRING .)


state 36

    (5) ids -> ids COMA ID .

    DOSPUNTOS       reduce using rule 5 (ids -> ids COMA ID .)
    COMA            reduce using rule 5 (ids -> ids COMA ID .)


state 37

    (10) bloque -> BEGIN PUNTOYCOMA estatutos END . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 49


state 38

    (17) estatutos -> estatuto estatutos .

    END             reduce using rule 17 (estatutos -> estatuto estatutos .)
    DLLAVE          reduce using rule 17 (estatutos -> estatuto estatutos .)


state 39

    (20) asignar -> asignar_base PUNTOYCOMA .

    IF              reduce using rule 20 (asignar -> asignar_base PUNTOYCOMA .)
    WHILE           reduce using rule 20 (asignar -> asignar_base PUNTOYCOMA .)
    FOR             reduce using rule 20 (asignar -> asignar_base PUNTOYCOMA .)
    WRITELN         reduce using rule 20 (asignar -> asignar_base PUNTOYCOMA .)
    ID              reduce using rule 20 (asignar -> asignar_base PUNTOYCOMA .)
    END             reduce using rule 20 (asignar -> asignar_base PUNTOYCOMA .)
    DLLAVE          reduce using rule 20 (asignar -> asignar_base PUNTOYCOMA .)


state 40

    (25) if -> IF IPAREN . expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE
    (26) if -> IF IPAREN . expresion DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE marca_goto ELSE ILLAVE estatutos DLLAVE
    (37) expresion -> . expresionS MEQ expresionS
    (38) expresion -> . expresionS MAQ expresionS
    (39) expresion -> . expresionS MEI expresionS
    (40) expresion -> . expresionS MAI expresionS
    (41) expresion -> . expresionS IGUAL expresionS
    (42) expresion -> . expresionS DISTINTO expresionS
    (43) expresion -> . expresionS
    (44) expresionS -> . expresionS SUMA termino
    (45) expresionS -> . expresionS RESTA termino
    (46) expresionS -> . expresionS OR termino
    (47) expresionS -> . termino
    (48) termino -> . termino MULTIPLICAR factor
    (49) termino -> . termino DIVIDIR factor
    (50) termino -> . termino AND factor
    (51) termino -> . factor
    (52) factor -> . ID
    (53) factor -> . CTE
    (54) factor -> . TRUE
    (55) factor -> . FALSE
    (56) factor -> . IPAREN expresion DPAREN
    (57) factor -> . NOT factor

    ID              shift and go to state 55
    CTE             shift and go to state 56
    TRUE            shift and go to state 57
    FALSE           shift and go to state 58
    IPAREN          shift and go to state 50
    NOT             shift and go to state 59

    expresion                      shift and go to state 51
    expresionS                     shift and go to state 52
    termino                        shift and go to state 53
    factor                         shift and go to state 54

state 41

    (29) while -> WHILE marca_inicio . IPAREN expresion marca_gotoF DPAREN DO ILLAVE estatutos DLLAVE

    IPAREN          shift and go to state 60


state 42

    (30) marca_inicio -> empty .

    IPAREN          reduce using rule 30 (marca_inicio -> empty .)
    ID              reduce using rule 30 (marca_inicio -> empty .)
    CTE             reduce using rule 30 (marca_inicio -> empty .)
    TRUE            reduce using rule 30 (marca_inicio -> empty .)
    FALSE           reduce using rule 30 (marca_inicio -> empty .)
    NOT             reduce using rule 30 (marca_inicio -> empty .)


state 43

    (31) for -> FOR IPAREN . asignar_base PUNTOYCOMA marca_inicio expresion marca_gotoF PUNTOYCOMA incremento_expr DPAREN ILLAVE estatutos DLLAVE
    (19) asignar_base -> . ID ASSIGNAR expresion

    ID              shift and go to state 62

    asignar_base                   shift and go to state 61

state 44

    (21) writeln -> WRITELN IPAREN . valor DPAREN PUNTOYCOMA
    (22) valor -> . CTE
    (23) valor -> . ID
    (24) valor -> . STRING

    CTE             shift and go to state 64
    ID              shift and go to state 65
    STRING          shift and go to state 66

    valor                          shift and go to state 63

state 45

    (35) incremento_puntocoma -> ID INCREMENTO . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 67


state 46

    (36) incremento_puntocoma -> ID DECREMENTO . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 68


state 47

    (19) asignar_base -> ID ASSIGNAR . expresion
    (37) expresion -> . expresionS MEQ expresionS
    (38) expresion -> . expresionS MAQ expresionS
    (39) expresion -> . expresionS MEI expresionS
    (40) expresion -> . expresionS MAI expresionS
    (41) expresion -> . expresionS IGUAL expresionS
    (42) expresion -> . expresionS DISTINTO expresionS
    (43) expresion -> . expresionS
    (44) expresionS -> . expresionS SUMA termino
    (45) expresionS -> . expresionS RESTA termino
    (46) expresionS -> . expresionS OR termino
    (47) expresionS -> . termino
    (48) termino -> . termino MULTIPLICAR factor
    (49) termino -> . termino DIVIDIR factor
    (50) termino -> . termino AND factor
    (51) termino -> . factor
    (52) factor -> . ID
    (53) factor -> . CTE
    (54) factor -> . TRUE
    (55) factor -> . FALSE
    (56) factor -> . IPAREN expresion DPAREN
    (57) factor -> . NOT factor

    ID              shift and go to state 55
    CTE             shift and go to state 56
    TRUE            shift and go to state 57
    FALSE           shift and go to state 58
    IPAREN          shift and go to state 50
    NOT             shift and go to state 59

    expresion                      shift and go to state 69
    expresionS                     shift and go to state 52
    termino                        shift and go to state 53
    factor                         shift and go to state 54

state 48

    (2) variables -> VAR ids DOSPUNTOS TypeOf PUNTOYCOMA .

    BEGIN           reduce using rule 2 (variables -> VAR ids DOSPUNTOS TypeOf PUNTOYCOMA .)


state 49

    (10) bloque -> BEGIN PUNTOYCOMA estatutos END PUNTOYCOMA .

    DLLAVE          reduce using rule 10 (bloque -> BEGIN PUNTOYCOMA estatutos END PUNTOYCOMA .)


state 50

    (56) factor -> IPAREN . expresion DPAREN
    (37) expresion -> . expresionS MEQ expresionS
    (38) expresion -> . expresionS MAQ expresionS
    (39) expresion -> . expresionS MEI expresionS
    (40) expresion -> . expresionS MAI expresionS
    (41) expresion -> . expresionS IGUAL expresionS
    (42) expresion -> . expresionS DISTINTO expresionS
    (43) expresion -> . expresionS
    (44) expresionS -> . expresionS SUMA termino
    (45) expresionS -> . expresionS RESTA termino
    (46) expresionS -> . expresionS OR termino
    (47) expresionS -> . termino
    (48) termino -> . termino MULTIPLICAR factor
    (49) termino -> . termino DIVIDIR factor
    (50) termino -> . termino AND factor
    (51) termino -> . factor
    (52) factor -> . ID
    (53) factor -> . CTE
    (54) factor -> . TRUE
    (55) factor -> . FALSE
    (56) factor -> . IPAREN expresion DPAREN
    (57) factor -> . NOT factor

    ID              shift and go to state 55
    CTE             shift and go to state 56
    TRUE            shift and go to state 57
    FALSE           shift and go to state 58
    IPAREN          shift and go to state 50
    NOT             shift and go to state 59

    expresion                      shift and go to state 70
    expresionS                     shift and go to state 52
    termino                        shift and go to state 53
    factor                         shift and go to state 54

state 51

    (25) if -> IF IPAREN expresion . DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE
    (26) if -> IF IPAREN expresion . DPAREN marca_gotoF THEN ILLAVE estatutos DLLAVE marca_goto ELSE ILLAVE estatutos DLLAVE

    DPAREN          shift and go to state 71


state 52
